--- a/static/css/style8.css
+++ b/static/css/style8.css
@@ -1,9 +1,6 @@
-body{
-  margin-top:30px;
-  margin-left:30px;
+.content{
+ display:none;
 }
-button{
- background-color: blue;
- border-radius: 5px;
- height:50px;
+.img{
+ border-radius:50px;
 }
