--- a/templates/about.html
+++ b/templates/about.html
@@ -10,113 +10,25 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-     {% load static  %}
-    <link rel="stylesheet" href="{% static 'css/style7.css' %}">
-      <link rel="stylesheet" href="{% static 'css/style8.css' %}">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body>
-  <div class="sidebar">
-    <div class="logo-details">
-      <span class="logo_name">FG</span>
-    </div>
-      <ul class="nav-links">
-        <li>
-          <a href="" >
-            <i class='bx bx-grid-alt' ></i>
-            <span class="links_name">My Profile</span>
-          </a>
-        </li>
-          <li>
-          <a href="view_address" >
-            <i class='bx bx-grid-alt' ></i>
-            <span class="links_name">Address</span>
-          </a>
-        </li>
-        <li>
-          <a href="product">
-            <i class='bx bx-box' ></i>
-            <span class="links_name">Product</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-list-ul' ></i>
-            <span class="links_name">Order</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="wishlist">
-            <i class='bx bx-heart' ></i>
-            <span class="links_name">Favourites</span>
-          </a>
-        </li>
-
-        <li class="log_out">
-          <a href="{% url 'logout' %} ">
-            <i class='bx bx-log-out'></i>
-            <span class="links_name">Log out</span>
-          </a>
-        </li>
-      </ul>
-  </div>
-  <section class="home-section">
-      <div class="col-lg-9 my-lg-0 my-1">
-          <div id="main-content" style="margin-left:10px;" class="bg-white border">
-            <form method="POST">
-        {% csrf_token %}
-    <div class="text-center">
-        <h2>Wishlist</h2>
-    </div>
-<div class="row row-cols-2 row-cols-lg-4">
-    {% for x in favourites %}
-    <div class="card" style="width:20rem;">
-            <a href="view_product/{{x.product_id}}" style="text-decoration:none">
-                    <img src="{{ x.product_id.images.first.image_file.url }}" alt="Product Image">
-                <div class="card-body">
-                    <div class="heart-icon">
-                        <i class="fa fa-heart" style="color:red;"></i>
-                    </div>
-                    <div class="ratting">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half"></i>
-                    </div>
-                    <div class="price">
-                        <p>{{ x.product_id.product_name }}</p>
-                        <p>{{ x.product_id.description }}</p>
-                        <p> ₹{{ x.product_id.price }}</p>
-                    </div>
-                </div>
-            </a>
+  <body>
+  <center>
+<section class="about" id="about">
+    <h1 class="heading"><span>About</span>Us</h1>
+    <div class="row">
+        <div class="content">
+            <p>Welcome to our exquisite online dress boutique, where style meets convenience in the click of a button.<br>
+                At Fashion Gallery, we curate a diverse collection of fashionable dresses that cater to every occasion and personality.<br>
+                Explore our virtual racks filled with the latest trends, timeless classics, and statement pieces that effortlessly blend comfort and elegance.<br>
+                Our user-friendly interface ensures a seamless shopping experience, allowing you to browse, select, and purchase with ease.<br>
+                Whether you're seeking the perfect cocktail dress for a special evening or a casual-chic ensemble for everyday glamour, we have you covered.<br>
+                Our commitment to quality extends beyond the fabric, as we prioritize customer satisfaction through secure transactions, swift deliveries, and hassle-free returns.<br>
+                Embrace your individuality and elevate your wardrobe with Fashion Gallery, where fashion is more than just clothing; it's a statement of self-expression. Happy shopping!
+            </p>
         </div>
-        {% endfor %}
     </div>
-    </form>
-
-
-          </div>
-      </div>
-  </section>
-
-  <script>
-
-   let sidebar = document.querySelector(".sidebar");
-let sidebarBtn = document.querySelector(".sidebarBtn");
-sidebarBtn.onclick = function() {
-  sidebar.classList.toggle("active");
-  if(sidebar.classList.contains("active")){
-  sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
-}else
-  sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-}
-
-
-
- </script>
-
+</section>
+  </center>
 </body>
 </html>
