--- a/templates/edit_address.html
+++ b/templates/edit_address.html
@@ -1,10 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     {% load static  %}
+    <link rel="stylesheet" href="{% static 'css/style7.css' %}">
+      <link rel="stylesheet" href="{% static 'css/style8.css' %}">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
 <body>
-$END$
+<div class="sidebar">
+    <div class="logo-details">
+        <span class="logo_name">FG</span>
+    </div>
+    <ul class="nav-links">
+        <li>
+            <a href="profile">
+                <i class='bx bx-grid-alt' ></i>
+                <span class="links_name">My Profile</span>
+            </a>
+        </li>
+        <li>
+            <a href="address">
+                <i class='bx bx-box' ></i>
+                <span class="links_name">Address</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-list-ul' ></i>
+                <span class="links_name">Product</span>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i class='bx bx-heart' ></i>
+                <span class="links_name">Favourites</span>
+            </a>
+        </li>
+        <li class="log_out">
+            <a href="{% url 'logout' %} ">
+                <i class='bx bx-log-out'></i>
+                <span class="links_name">Log out</span>
+            </a>
+        </li>
+    </ul>
+</div>
+<section class="home-section">
+    <div class="col-lg-9 my-lg-0 my-1">
+        <div id="main-content" style="margin-left:10px;" class="bg-white border">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100 w-100">
+                    <div class="col-xl-10">
+                        <div class="row g-0">
+                            <div class="col-lg-6">
+                                <div class="card-body p-md-4 mx-md-4">
+                                    <form method="POST">
+                                        <h2>Edit Address</h2>
+                                        {% for x in datas %}
+                                        <div class="form-outline mb-4">
+                                            {% csrf_token %}
+                                            <label class="form-label" for="house_name">House Name</label>
+                                            <input type="text" id="house_name" name="house_name" class="form-control" value="{{x.house_name}}"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="city_name">City Name</label>
+                                            <input type="text" id="city_name" name="city_name" class="form-control" value="{{x.city_name}}"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="landmark">Landmark</label>
+                                            <input type="text" id="landmark" name="landmark" class="form-control" value="{{x.landmark}}"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="district">District</label>
+                                            <input type="text" id="district" name="district" class="form-control" value="{{x.district}}"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="state">State</label>
+                                            <input type="text" id="state" name="state" class="form-control" value="{{x.state}}"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="post_office">Post Office</label>
+                                            <input type="text" id="post_office" name="post_office" class="form-control" value="{{x.post_office}}"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="pin">Pin Code</label>
+                                            <input type="number" id="pin" name="pin" required pattern="[0-9]{6}" class="form-control" value="{{x.pin}}"/>
+                                            </div>
+                                {% endfor %}
+                                <div class="text-center pt-1 mb-5 pb-1">
+                                    <button class="btn btn-outline-primary btn-block fa-lg gradient-custom-2 mb-3"
+                                        type="submit">Update</button><br><br>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+          </div>
+    </div>
+  </section>
+
+  <script>
+
+   let sidebar = document.querySelector(".sidebar");
+let sidebarBtn = document.querySelector(".sidebarBtn");
+sidebarBtn.onclick = function() {
+  sidebar.classList.toggle("active");
+  if(sidebar.classList.contains("active")){
+  sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
+}else
+  sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+}
+
+
+
+ </script>
+
 </body>
 </html>
