--- a/templates/home.html
+++ b/templates/home.html
@@ -13,36 +13,39 @@
         crossorigin="anonymous"></script>
      {% load static  %}
     <link rel="stylesheet" href="{% static 'css/style3.css' %}">
-     <script src="{% static '/js/script.js' %}" type="text/javascript"></script>
     <title>home</title>
 </head>
 <body>
- <header>
-        <a href="#" class="logo"><img src="media/images/fg.jpg" alt=""></a>
-        <ul class="navmenu">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#Products">Products</a></li>
-            <div class="dropdown">
-                <a href="#" class=" dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
-                  Category</a>
-
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                  <li><a class="dropdown-item" href="#">Men's dress</a></li>
-                  <li><a class="dropdown-item" href="#">Women's dress</a></li>
-                  <li><a class="dropdown-item" href="#">Kid's dress</a></li>
-                </ul>
-              </div>
-        </ul>
-        <div class="nav-icons">
-            <a href="#"><i class="fa fa-search"></i></a>
-            <a href="user_login"><i class="fa fa-user"></i></a>
-            <a href="#" ><i style="color: red;" class="fa fa-heart"></i></a>
-            <a href="#"><i class="fa fa-shopping-cart"></i></a>
-            <div class="fa fa-bars" id="menu-icon"></div>
+<header>
+    <a href="#" class="logo"><img src="media/images/fg.jpg" alt=""></a>
+    <ul class="navmenu">
+        <li><a href="#Home">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="#Products">Products</a></li>
+        <div class="dropdown">
+            <a href="#" class=" dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
+                Category</a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+                <li><a class="dropdown-item" href="#">Men's dress</a></li>
+                <li><a class="dropdown-item" href="#">Women's dress</a></li>
+                <li><a class="dropdown-item" href="#">Kid's dress</a></li>
+            </ul>
         </div>
-    </header>
-   <section class="main-home" style="background: url('media/images/sa.png') no-repeat; background-position: right;">
+        <li><a href="user_login">Login</a></li>
+        <form class="form-inline my-2 my-lg-0"  method="POST">
+                        {% csrf_token %}
+                        <input  type="text" name="product_name" value="{{ request.POST.product_name }}" placeholder="Search.." aria-label="Search">
+                        <button type="submit">Search</button>
+     </form>
+    </ul>
+    <div class="nav-icons">
+        <a href="wishlist"><i style="color: red;" class="fa fa-heart"></i></a>
+        <a href="view_cart"><i class="fa fa-shopping-cart"></i></a>
+        <a href="profile"><i class="fa fa-user"></i></a>
+        <div class="fa fa-bars" id="menu-icon"></div>
+    </div>
+</header>
+<section class="main-home" style="background: url('media/images/sa.png') no-repeat; background-position: right;" id="home">
     <div class="main-text">
         <h5>Winter Collection</h5>
         <h1>New Winter<br>Collection 2023</h1>
@@ -50,93 +53,118 @@
         <a href="#" class="main-btn">Shop Now <i class="fa fa-arrow-right"></i></a>
     </div>
 </section>
- <section class="trending-product" id="trending">
-     <div class="text-center">
-         <h2>Our Trending <span>Products</span></h2>
-     </div>
-     <div class="products">
-         {% for x in product_details %}
-         <div class="row">
-             <a href="view_product/{{x.product_id}}" style="text-decoration:none">
-                 <div class="product-container">
-                     {% for image in x.images.all|slice:":1" %}
-                     <img src="{{ image.image_file.url }}" alt="Product Image">
-                     {% endfor %}
-                     <div class="heart-icon">
-                         <i class="fa fa-heart"></i>
-                     </div>
-                     <div class="ratting">
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star-half"></i>
-                     </div>
-                     <div class="price">
-                         <p>{{ x.product_name }}</p>
-                         <p>{{ x.description }}</p>
-                         <p>{{ x.quantity }}</p>
-                         <p> ₹{{ x.price }}</p>
-                     </div>
-                 </div>
-             </a>
+<section class="trending-product" id="products">
+    <form method="POST">
+        {% csrf_token %}
+    <div class="text-center">
+        <h2>Our Trending <span>Products</span></h2>
+    </div>
+<div class="row row-cols-2 row-cols-lg-4">
+    {% for x in product_details %}
+    <div class="card p-2" style="width:17rem; margin-top:10px; margin-bottom:10px; margin-right:10px; margin-left:10px; border:1px solid;">
+            <a href="view_product/{{x.product_id}}" style="text-decoration:none">
+                    {% for image in x.images.all|slice:":1" %}
+                    <img src="{{ image.image_file.url }}" style="width:250px; height:250px;" alt="Product Image">
+                    {% endfor %}
+            </a>
+                <div class="card-body">
+                    <div class="heart-icon">
+                        <button style="border:none;" type="submit"><i class="fa fa-heart"></i></button>
+                    </div>
+                    <div class="ratting">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half"></i>
+                    </div>
+                    <div class="price">
+                        <p>{{ x.product_name }}</p>
+                        <p>{{ x.description }}</p>
+                        <p> ₹{{ x.price }}</p>
+                        {% for offer in x.offer.all %}
+                        <p style="color:gray;">{{offer.discount}}</p>
+                        {% endfor %}
+                    </div>
+                </div>
          </div>
-         {% endfor %}
-     </div>
- </section>
- <section class="about" id="about">
-     <h1 class="heading"><span>about</span>us</h1>
-     <div class="row">
-         <div class="content">
-             <h3>why choose us?</h3>
-             <p>We offer the best quality products and services.</p>
-             <a href="#" class="btn">read more</a>
-         </div>
-     </div>
- </section>
- <section class="contact">
-     <div class="contact-info">
-         <div class="first-info">
-             <img src="media/images/fg.jpg" alt="">
-             <p>3245 Grant Street Longview, <br> TX united kingdom 765378</p>
-             <p>01601348732</p>
-             <p>fg@gmail.com</p>
-             <div class="social-icons">
-                 <a href="#"><i class="fa fa-facebook"></i></a>
-                 <a href="#"><i class="fa fa-instagram"></i></a>
-                 <a href="#"><i class="fa fa-twitter"></i></a>
-                 <a href="#"><i class="fa fa-youtube"></i></a>
-                 <a href="#"><i class="fa fa-linkedin"></i></a>
-             </div>
-         </div>
-         <div class="second-info">
-             <h4>Support</h4>
-             <p>Contact us</p>
-             <p>About page</p>
-             <p>Size guide</p>
-             <p>Shpooing & Returns</p>
-             <p>Privacy</p>
-         </div>
-         <div class="third-info">
-             <h4>Shop</h4>
-             <p>Men's Shopping</p>
-             <p>Women's Shopping</p>
-             <p>Kid's Shopping</p>
-             <p>Discount</p>
-         </div>
-         <div class="fourth-info">
-             <h4>Company</h4>
-             <p>About</p>
-             <p>Affiliate</p>
-             <p>Login</p>
-         </div>
-         <div class="five">
-             <h4>Subscribe</h4>
-             <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
-             <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
-             <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
-         </div>
-     </div>
- </section>
+
+        {% endfor %}
+</div>
+        </form>
+</section>
+<section class="contact">
+    <div class="contact-info">
+        <div class="first-info">
+            <img src="media/images/fg.jpg" alt="">
+            <p>3245 Grant Street Longview, <br> TX united kingdom 765378</p>
+            <p>01601348732</p>
+            <p>fg@gmail.com</p>
+            <div class="social-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+            </div>
+        </div>
+        <div class="second-info">
+            <h4>Support</h4>
+            <p>Contact us</p>
+            <p>About page</p>
+            <p>Size guide</p>
+            <p>Shpooing & Returns</p>
+            <p>Privacy</p>
+        </div>
+        <div class="third-info">
+            <h4>Shop</h4>
+            <p>Men's Shopping</p>
+            <p>Women's Shopping</p>
+            <p>Kid's Shopping</p>
+            <p>Discount</p>
+        </div>
+        <div class="fourth-info">
+            <h4>Company</h4>
+            <p>About</p>
+            <p>Affiliate</p>
+            <p>Login</p>
+        </div>
+        <div class="five">
+            <h4>Subscribe</h4>
+            <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
+            <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
+            <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
+        </div>
+    </div>
+</section>
+<script>
+        const header = document.querySelector("header");
+        window.addEventListener("scroll", function () {
+            header.classList.toggle("sticky", this.window.scrollY > 0);
+            });
+            document.addEventListener('DOMContentLoaded', function() {
+            let menu = document.querySelector('#menu-icon');
+            let navmenu = document.querySelector('.navmenu');
+            menu.onclick = () => {
+            menu.classList.toggle('open');
+            navmenu.classList.toggle('open');
+            };
+            });
+            var slideIndex = 0;
+            function showSlides() {
+            var i;
+            var slides = document.querySelectorAll(".mySlides");
+            for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) { slideIndex = 1; }
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 2000);
+            }
+            document.addEventListener("DOMContentLoaded", function () {
+            showSlides();
+            });
+</script>
 </body>
 </html>
