--- a/templates/image_page.html
+++ b/templates/image_page.html
@@ -1,10 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<!-- Coding by CodingNepal | www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     {% load static  %}
+    <link rel="stylesheet" href="{% static 'css/style7.css' %}">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
 <body>
-$END$
+  <div class="sidebar">
+    <div class="logo-details">
+<!--      <i class='bx bxl-c-plus-plus'></i>-->
+      <span class="logo_name">FG</span>
+    </div>
+      <ul class="nav-links">
+        <li>
+          <a href="seller_page" >
+            <i class='bx bx-grid-alt' ></i>
+            <span class="links_name">Dashboard</span>
+          </a>
+        </li>
+        <li>
+          <a href="product">
+            <i class='bx bx-box' ></i>
+            <span class="links_name">Product</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-list-ul' ></i>
+            <span class="links_name">Order list</span>
+          </a>
+        </li>
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-pie-chart-alt-2' ></i>-->
+<!--            <span class="links_name">Analytics</span>-->
+<!--          </a>-->
+<!--        </li>-->
+        <li>
+          <a href="#">
+            <i class='bx bx-coin-stack' ></i>
+            <span class="links_name">Stock</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-book-alt' ></i>
+            <span class="links_name">Total order</span>
+          </a>
+        </li>
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-user' ></i>-->
+<!--            <span class="links_name">Team</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-message' ></i>-->
+<!--            <span class="links_name">Messages</span>-->
+<!--          </a>-->
+<!--        </li>-->
+        <li>
+          <a href="#">
+            <i class='bx bx-heart' ></i>
+            <span class="links_name">Favourites</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-cog' ></i>
+            <span class="links_name">Setting</span>
+          </a>
+        </li>
+        <li class="log_out">
+          <a href="{% url 'seller_logout' %} ">
+            <i class='bx bx-log-out'></i>
+            <span class="links_name">Log out</span>
+          </a>
+        </li>
+      </ul>
+  </div>
+  <section class="home-section">
+    <nav>
+      <div class="sidebar-button">
+        <i class='bx bx-menu sidebarBtn'></i>
+        <span class="dashboard">Dashboard</span>
+      </div>
+      <div class="search-box">
+        <input type="text" placeholder="Search...">
+        <i class='bx bx-search' ></i>
+      </div>
+      {% for x in sellers %}
+      <div class="profile-details">
+<!--        <img src="media/images/profile.png" alt="">-->
+        <span class="seller_name">{{x.seller_name}}</span><br><br>
+        <span class="seller_id">{{x.seller_id}}</span>
+<!--        <i class='bx bx-chevron-down' ></i>-->
+      </div>
+      {% endfor %}
+    </nav>
+
+    <div class="home-content" id="content-placeholder">
+      <div class="container py-5 h-100">
+        <div class="row d-flex align-items-center justify-content-center h-100">
+
+            <div class="col-md-7 col-lg-5 col-xl-5">
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <h1 class="text-center">IMAGE</h1>
+                    <div class="form-outline mb-4">
+                        <label class="form-label" for="image_file">Image</label>
+                        <input type="file" id="image_file" name="product_image" class="form-control  form-control-lg" required />
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary btn-lg btn-block">Upload</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    </div>
+  </section>
+
+  <script>
+   let sidebar = document.querySelector(".sidebar");
+let sidebarBtn = document.querySelector(".sidebarBtn");
+sidebarBtn.onclick = function() {
+  sidebar.classList.toggle("active");
+  if(sidebar.classList.contains("active")){
+  sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
+}else
+  sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+}
+
+ </script>
+
 </body>
 </html>
