--- a/templates/search.html
+++ b/templates/search.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+     {% load static  %}
+    <link rel="stylesheet" href="{% static 'css/style3.css' %}">
+    <title>Search</title>
 </head>
 <body>
-$END$
+<header>
+    <a href="#" class="logo"><img src="media/images/fg.jpg" alt=""></a>
+    <form class="form-inline my-2 my-lg-0"  method="POST">
+                        {% csrf_token %}
+                        <input  type="text" name="product_name" value="{{ request.POST.product_name }}" placeholder="Search.." aria-label="Search">
+                        <button type="submit">Search</button>
+     </form>
+    <div class="nav-icons">
+        <a href="#" ><i style="color: red;" class="fa fa-heart"></i></a>
+        <a href="view_cart"><i class="fa fa-shopping-cart"></i></a>
+     </div>
+</header><br><br><br><br><br><br><br>
+<div class="container">
+ <div class="dropdown">
+                <a href="#" style="text-decoration:none; color:black;" class="dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">Sort by</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+                    <li><a class="dropdown-item" href="?price=200">Under 200</a></li>
+                    <li><a class="dropdown-item" href="?price=500">Under 500</a></li>
+                    <li><a class="dropdown-item" href="?price=600">Under 600</a></li>
+                    <li><a class="dropdown-item" href="?price=800">Under 800</a></li>
+                    <li><a class="dropdown-item" href="?price=1000">Under 1000</a></li>
+                    <li><a class="dropdown-item" href="?price=2000">Under 2000</a></li>
+                </ul>
+ </div><br>
+<div class="dropdown">
+    <a href="#" style="text-decoration:none; color:black;" class="dropdown-toggle" type="choose" id="dropdownMenus" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+        <li><a class="dropdown-item" href="#">Shirt</a></li>
+        <li><a class="dropdown-item" href="#">Kurta</a></li>
+        <li><a class="dropdown-item" href="#">Girls Western Wear</a></li>
+        <li><a class="dropdown-item" href="#">Jeans</a></li>
+        <li><a class="dropdown-item" href="#">Saree</a></li>
+        <li><a class="dropdown-item" href="#">Boys Dress</a></li>
+        <li><a class="dropdown-item" href="#">T-shirt</a></li>
+    </ul>
+</div>
+</div>
+<section class="trending-product" id="products">
+        <form method="POST">
+            {% csrf_token %}
+            <div class="row">
+                {% for x in search %}
+                <div class="col-md-6">
+                    <div class="product-card">
+                        <a href="view_product/{{x.product_id}}" style="text-decoration:none">
+                            {% for image in x.images.all|slice:":1" %}
+                            <img src="{{ image.image_file.url }}" alt="Product Image">
+                            {% endfor %}
+                        </a>
+                        <div class="product-details">
+                            <div class="heart-icon">
+                                <button style="border:none;" type="submit"><i class="fa fa-heart"></i></button>
+                            </div>
+                            <div class="ratting">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half"></i>
+                            </div>
+                            <div class="price">
+                                <p>{{ x.product_name }}</p>
+                                <p>{{ x.description }}</p>
+                                <p> ₹{{ x.price }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </form>
+    </section>
 </body>
 </html>
