--- a/templates/view_address.html
+++ b/templates/view_address.html
@@ -1,10 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     {% load static  %}
+    <link rel="stylesheet" href="{% static 'css/style7.css' %}">
+      <link rel="stylesheet" href="{% static 'css/style8.css' %}">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
 <body>
-$END$
+  <div class="sidebar">
+    <div class="logo-details">
+<!--      <i class='bx bxl-c-plus-plus'></i>-->
+      <span class="logo_name">FG</span>
+    </div>
+      <ul class="nav-links">
+        <li>
+          <a href="profile">
+            <i class='bx bx-grid-alt' ></i>
+            <span class="links_name">My Profile</span>
+          </a>
+        </li>
+        <li>
+          <a href="address">
+            <i class='bx bx-box' ></i>
+            <span class="links_name">Address</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-list-ul' ></i>
+            <span class="links_name">Product</span>
+          </a>
+        </li>
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-pie-chart-alt-2' ></i>-->
+<!--            <span class="links_name">Analytics</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-coin-stack' ></i>-->
+<!--            <span class="links_name">Stock</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-book-alt' ></i>-->
+<!--            <span class="links_name">Total order</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-user' ></i>-->
+<!--            <span class="links_name">Team</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-message' ></i>-->
+<!--            <span class="links_name">Messages</span>-->
+<!--          </a>-->
+<!--        </li>-->
+        <li>
+          <a href="#">
+            <i class='bx bx-heart' ></i>
+            <span class="links_name">Favourites</span>
+          </a>
+        </li>
+        <li>
+<!--          <a href="#">-->
+<!--            <i class='bx bx-cog' ></i>-->
+<!--            <span class="links_name">Setting</span>-->
+<!--          </a>-->
+<!--        </li>-->
+        <li class="log_out">
+          <a href="{% url 'logout' %} ">
+            <i class='bx bx-log-out'></i>
+            <span class="links_name">Log out</span>
+          </a>
+        </li>
+      </ul>
+  </div>
+  <section class="home-section">
+    <div class="col-lg-9 my-lg-0 my-1">
+          <div id="main-content" style="margin-left:10px;" class="bg-white border">
+          <h3>My Address</h3>
+              <a style="margin-left:800px; text-decoration:none; align:right;" href="address">Add</a>
+              {% for x in adds %}
+              <p>{{x.house_name}},{{x.city_name}},{{x.landmark}}</p>
+              <p>{{x.state}},{{x.district}}</p>
+              <p>{{x.post_office}},{{x.pin}}</p>
+              <a style="text-decoration:none;" href="/update/{{x.address_id}}">Update</a>
+              <a style="text-decoration:none;" href="/remove/{{x.address_id}}"> /Remove</a>
+              <p>_______________________________________________________________________</p>
+              {% endfor %}
+          </div>
+          </div>
+    </div>
+  </section>
+
+  <script>
+
+   let sidebar = document.querySelector(".sidebar");
+let sidebarBtn = document.querySelector(".sidebarBtn");
+sidebarBtn.onclick = function() {
+  sidebar.classList.toggle("active");
+  if(sidebar.classList.contains("active")){
+  sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
+}else
+  sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+}
+
+
+
+ </script>
+
 </body>
 </html>
