--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -13,17 +13,49 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      {% load static  %}
     <link rel="stylesheet" href="{% static 'css/style5.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style3.css' %}">
      <script src="{% static '/js/script1.js' %}" type="text/javascript"></script>
     <title>more Product</title>
 </head>
 <body>
+<header>
+    <a href="#" class="logo"><img src="media/images/fg.jpg" alt=""></a>
+    <ul class="navmenu">
+        <li><a href="/">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="#Products">Products</a></li>
+        <div class="dropdown">
+            <a href="#" class=" dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
+                Category</a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+                <li><a class="dropdown-item" href="#">Men's dress</a></li>
+                <li><a class="dropdown-item" href="#">Women's dress</a></li>
+                <li><a class="dropdown-item" href="#">Kid's dress</a></li>
+            </ul>
+        </div>
+        <li><a href="user_login">Login</a></li>
+        <form class="form-inline my-2 my-lg-0"  method="POST">
+                        {% csrf_token %}
+                        <input  type="text" name="product_name" value="{{ request.POST.product_name }}" placeholder="Search.." aria-label="Search">
+                        <button type="submit">Search</button>
+     </form>
+    </ul>
+    <div class="nav-icons">
+        <a href="wishlist"><i style="color: red;" class="fa fa-heart"></i></a>
+        <a href="view_cart"><i class="fa fa-shopping-cart"></i></a>
+        <a href="profile"><i class="fa fa-user"></i></a>
+        <div class="fa fa-bars" id="menu-icon"></div>
+    </div>
+</header>
+<form method="POST">
+    {% csrf_token %}
 {% for x in product %}
  <div class="flex-box">
         <div class="left">
             <div class="big-img">
                 {% csrf_token %}
                 {% for image in x.images.all|slice:":1" %}
-                <img src="{{ image.image_file.url }}" alt="noimg">
+                <img src="{{ image.image_file.url }}" style="width:50%; height:50%; margin-top:100px; margin-left:10px; margin-right:10px;" alt="noimg">
                 {% endfor %}
             </div>
             <div class="images">
@@ -34,13 +66,17 @@
                   {% endfor %}
             </div>
         </div>
-        <div class="right">
+        <div class="right" style="margin-top:30px;">
             <div class="pname">
                 {{x.product_name}}<br>
                 {{ x.description }}
             </div>
             <div class="price">
                 ₹{{x.price}}
+            </div>
+            <div class="quantity">
+                <p>Quantity</p>
+                <input type="number"  name="quantity" min="1" max="5" value="1"/>
             </div>
             <div class="ratings">
                 <i class="fa fa-star"></i>
@@ -84,18 +120,28 @@
             <span class="product-color">color:{{boysdrs.color}}</span><br>
             {% endfor %}
             <div class="btn-box">
-                <button class="cart-btn"><a href="view_cart/{{ x.product_id }}" style="text-decoration:none;">Add to Cart</a></button>
-                <button class="buy-btn">Buy Now</button>
+                <button type="submit" class="cart-btn">Add to Cart</button>
+                <button type="submit" class="buy-btn">Buy Now</button>
+            </div><br><br>
+            <div>
+            <a href="/review/{{x.product_id}}" style="text-decoration:none;">Add Your Review</a><br><br><br>
+                <h2>Reviews</h2>
+            {% for review in x.review.all %}
+                <span class="user-name"><b>{{review.user_id.user_name}}</b></span><br>
+            <span class="product-review">{{review.review}}</span><br>
+            {% endfor %}
             </div>
         </div><br><br>
     </div><br><br>
 {% endfor %}
+
 <script>
     let bigImg = document.querySelector('.big-img img');
     function showImg(pic){
         bigImg.src= pic;
     }
 </script>
+</form>
 </body>
 </html>
 
