--- a/templates/viewproduct_page.html
+++ b/templates/viewproduct_page.html
@@ -1,10 +1,235 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<!-- Coding by CodingNepal | www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     {% load static  %}
+    <link rel="stylesheet" href="{% static 'css/style7.css' %}">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <style>
+    table, th, td {
+  border: 1px solid black;
+}
+body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        table {
+            width: 80%;
+            max-width: 800px;
+            border-collapse: collapse;
+            margin-top: 50px;
+
+
+        }
+
+        th, td {
+            border: 1px solid #dee2e6;
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .dropdown-toggle {
+            cursor: pointer;
+        }
+
+        .dropdown-menu {
+            min-width: 120px;
+        }
+
+        .dropdown-item {
+            color:#333;
+        }
+  </style>
+   </head>
 <body>
-$END$
+  <div class="sidebar">
+    <div class="logo-details">
+<!--      <i class='bx bxl-c-plus-plus'></i>-->
+      <span class="logo_name">FG</span>
+    </div>
+      <ul class="nav-links">
+        <li>
+          <a href="seller_page" >
+            <i class='bx bx-grid-alt' ></i>
+            <span class="links_name">Dashboard</span>
+          </a>
+        </li>
+        <li>
+          <a href="product">
+            <i class='bx bx-box' ></i>
+            <span class="links_name">Product</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-list-ul' ></i>
+            <span class="links_name">Order list</span>
+          </a>
+        </li>
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-pie-chart-alt-2' ></i>-->
+<!--            <span class="links_name">Analytics</span>-->
+<!--          </a>-->
+<!--        </li>-->
+        <li>
+          <a href="#">
+            <i class='bx bx-coin-stack' ></i>
+            <span class="links_name">Stock</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-book-alt' ></i>
+            <span class="links_name">Total order</span>
+          </a>
+        </li>
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-user' ></i>-->
+<!--            <span class="links_name">Team</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="#">-->
+<!--            <i class='bx bx-message' ></i>-->
+<!--            <span class="links_name">Messages</span>-->
+<!--          </a>-->
+<!--        </li>-->
+        <li>
+          <a href="#">
+            <i class='bx bx-heart' ></i>
+            <span class="links_name">Favourites</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class='bx bx-cog' ></i>
+            <span class="links_name">Setting</span>
+          </a>
+        </li>
+        <li class="log_out">
+          <a href="{% url 'seller_logout' %} ">
+            <i class='bx bx-log-out'></i>
+            <span class="links_name">Log out</span>
+          </a>
+        </li>
+      </ul>
+  </div>
+  <section class="home-section">
+    <nav>
+      <div class="sidebar-button">
+        <i class='bx bx-menu sidebarBtn'></i>
+        <span class="dashboard">Dashboard</span>
+      </div>
+      <div class="search-box">
+        <input type="text" placeholder="Search...">
+        <i class='bx bx-search' ></i>
+      </div>
+      {% for x in sellers %}
+      <div class="profile-details">
+<!--        <img src="media/images/profile.png" alt="">-->
+        <span class="seller_name">{{x.seller_name}}</span><br><br>
+        <span class="seller_id">{{x.seller_id}}</span>
+<!--        <i class='bx bx-chevron-down' ></i>-->
+      </div>
+      {% endfor %}
+    </nav>
+
+    <div class="home-content" id="content-placeholder">
+        <div class="cols-lg-9 my-lg-0 my-1">
+            <div id="main-content" class="bg-white border">
+     <form method="POST">
+<table align="center" bgcolor="lightgray" style="width:100%; margin-top:10px; margin-left:200px; margin-bottom:30px; height:80%;">
+  <tr>
+     <td style="color:blue;"><b>Id</b></td>
+    <td style="color:blue;"><b>Product Name</b></td>
+    <td style="color:blue;"><b>Description</b></td>
+    <td style="color:blue;"><b>Quantity</b></td>
+    <td style="color:blue;"><b>Materials</b></td>
+    <td style="color:blue;"><b>Pattern</b></td>
+    <td style="color:blue;"><b>Price</b></td>
+    <td style="color:blue;"><b>Subcategory</b></td>
+      <td style="color:blue;"><b>Actions</b></td>
+
+  </tr>
+    {% for x in product %}
+      <tr>
+        <td>{{x.product_id}}</td>
+    <td>{{x.product_name}}</td>
+    <td>{{x.description}}</td>
+    <td>{{x.quantity}}</td>
+          <td>{{x.materials}}</td>
+        <td>{{x.pattern}}</td>
+
+        <td>{{x.price}}</td>
+        <td>{{x.subcategory_id}}</td>
+
+
+        <td><a style="text-decoration:none;" href="/seller/remove/{{x.product_id}}"> Remove</a>
+            <a style="text-decoration:none;" href="/seller/update/{{x.product_id}}">Update</a>
+            <div class="dropdown">
+                <a href="#" style="text-decoration:none;" class="dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+                    <li><a class="dropdown-item" href="/seller/image/{{x.product}}">Image</a></li>
+                    <li><a class="dropdown-item" href="">Specification</a></li>
+                </ul>
+            </div>
+        </td>
+  </tr>
+    {% endfor %}
+</table>
+</form>
+    </div>
+        </div>
+    </div>
+  </section>
+
+  <script>
+   let sidebar = document.querySelector(".sidebar");
+let sidebarBtn = document.querySelector(".sidebarBtn");
+sidebarBtn.onclick = function() {
+  sidebar.classList.toggle("active");
+  if(sidebar.classList.contains("active")){
+  sidebarBtn.classList.replace("bx-menu" ,"bx-menu-alt-right");
+}else
+  sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+}
+
+ </script>
+
 </body>
 </html>
