--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+     {% load static  %}
+    <link rel="stylesheet" href="{% static 'css/style3.css' %}">
+    <title>wishlist</title>
 </head>
 <body>
-$END$
+<header>
+    <a href="/" class="logo"><img src="media/images/fg.jpg" alt=""></a>
+    <div class="nav-icons">
+        <a href="#" ><i style="color: red;" class="fa fa-heart"></i></a>
+        <a href="view_cart"><i class="fa fa-shopping-cart"></i></a>
+     </div>
+</header><br><br><br>
+<section class="trending-product" id="products">
+    <form method="POST">
+        {% csrf_token %}
+    <div class="text-center">
+        <h2>Wishlist</h2>
+    </div>
+<div class="row row-cols-2 row-cols-lg-4">
+    {% for x in wishlist %}
+    <div class="card" style="width:17rem; margin-top:10px; margin-bottom:10px; margin-right:10px; margin-left:10px; border:1px solid;">
+            <a href="view_product/{{x.product_id}}" style="text-decoration:none">
+                    <img src="{{ x.product_id.images.first.image_file.url }}" alt="Product Image">
+                <div class="card-body">
+                    <div class="heart-icon">
+                        <i class="fa fa-heart" style="color:red;"></i>
+                    </div>
+                    <div class="ratting">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half"></i>
+                    </div>
+                    <div class="price">
+                        <p>{{ x.product_id.product_name }}</p>
+                        <p>{{ x.product_id.description }}</p>
+                        <p> ₹{{ x.product_id.price }}</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        {% endfor %}
+    </div>
+    </form>
+</section>
 </body>
 </html>
