--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -2,6 +2,8 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            border:none;
+            box-shadow: none;
             scroll-behavior: smooth;
             font-family: 'Jost', sans-serif;
             list-style: none;
@@ -79,6 +81,9 @@
         }
         section {
             padding: 5% 10%;
+            background:none;
+            border:none;
+            box-shadow: none;
         }
 
         .main-home {
@@ -139,8 +144,6 @@
             padding: 10px;
             text-align: center;
             position: relative;
-            transition: all .40s;
-            box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
             border-radius: .5rem;
             text-decoration: none;
         }
@@ -214,33 +217,6 @@
 
         }
 
-
-        .heading {
-            font-size: 3rem;
-        }
-        .about .row {
-            display: flex;
-            align-items: center;
-            gap: 2rem;
-            flex-wrap: wrap;
-            padding: 2rem 0;
-            padding-bottom: 3rem;
-        }
-        .about .row .content {
-            flex: 1 1 40rem;
-        }
-        .about .row .content h3 {
-            font-size: 3rem;
-            color: #130404;
-        }
-
-        .about .row .content p {
-            font-size: 1.5rem;
-            color: #999;
-            padding: .5rem 0;
-            padding-top: 1rem;
-            line-height: 1.5;
-        }
         .contact {
             background-color: #f3f4f6;
         }
