--- a/templates/addproduct_page.html
+++ b/templates/addproduct_page.html
@@ -19,9 +19,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+   <div class="sidebar">
     <div class="logo-details">
-<!--      <i class='bx bxl-c-plus-plus'></i>-->
       <span class="logo_name">FG</span>
     </div>
       <ul class="nav-links">
@@ -38,35 +37,15 @@
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class='bx bx-list-ul' ></i>
-            <span class="links_name">Order list</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
+          <a href="view_offer">
             <i class='bx bx-coin-stack' ></i>
-            <span class="links_name">Stock</span>
+            <span class="links_name">Offer</span>
           </a>
         </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-book-alt' ></i>
-            <span class="links_name">Total order</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <i class='bx bx-heart' ></i>
-            <span class="links_name">Favourites</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-cog' ></i>
-            <span class="links_name">Setting</span>
+           <li>
+          <a href="">
+            <i class='bx bx-list-ul' ></i>
+            <span class="links_name">Order</span>
           </a>
         </li>
         <li class="log_out">
@@ -83,10 +62,10 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Dashboard</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search' ></i>
-      </div>
+<!--      <div class="search-box">-->
+<!--        <input type="text" placeholder="Search...">-->
+<!--        <i class='bx bx-search' ></i>-->
+<!--      </div>-->
       {% for x in sellers %}
       <div class="profile-details">
 <!--        <img src="media/images/profile.png" alt="">-->
