--- a/templates/image_page.html
+++ b/templates/image_page.html
@@ -21,7 +21,6 @@
 <body>
   <div class="sidebar">
     <div class="logo-details">
-<!--      <i class='bx bxl-c-plus-plus'></i>-->
       <span class="logo_name">FG</span>
     </div>
       <ul class="nav-links">
@@ -38,51 +37,15 @@
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class='bx bx-list-ul' ></i>
-            <span class="links_name">Order list</span>
-          </a>
-        </li>
-<!--        <li>-->
-<!--          <a href="#">-->
-<!--            <i class='bx bx-pie-chart-alt-2' ></i>-->
-<!--            <span class="links_name">Analytics</span>-->
-<!--          </a>-->
-<!--        </li>-->
-        <li>
-          <a href="#">
+          <a href="view_offer">
             <i class='bx bx-coin-stack' ></i>
-            <span class="links_name">Stock</span>
+            <span class="links_name">Offer</span>
           </a>
         </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-book-alt' ></i>
-            <span class="links_name">Total order</span>
-          </a>
-        </li>
-<!--        <li>-->
-<!--          <a href="#">-->
-<!--            <i class='bx bx-user' ></i>-->
-<!--            <span class="links_name">Team</span>-->
-<!--          </a>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="#">-->
-<!--            <i class='bx bx-message' ></i>-->
-<!--            <span class="links_name">Messages</span>-->
-<!--          </a>-->
-<!--        </li>-->
-        <li>
-          <a href="#">
-            <i class='bx bx-heart' ></i>
-            <span class="links_name">Favourites</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class='bx bx-cog' ></i>
-            <span class="links_name">Setting</span>
+           <li>
+          <a href="">
+            <i class='bx bx-list-ul' ></i>
+            <span class="links_name">Order</span>
           </a>
         </li>
         <li class="log_out">
