--- a/templates/moreproduct.html
+++ b/templates/moreproduct.html
@@ -16,11 +16,10 @@
     <title>more products</title>
 <body>
 <header>
-    <a href="#" class="logo"><img src="media/images/fg.jpg" alt=""></a>
+    <a href="/" class="logo"><img src="media/images/fg.jpg" alt=""></a>
     <ul class="navmenu">
-        <li><a href="#Home">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
-        <li><a href="#Products">Products</a></li>
         <div class="dropdown">
             <a href="#" class=" dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
                 Category</a>
