--- a/templates/page.html
+++ b/templates/page.html
@@ -17,11 +17,10 @@
 </head>
 <body>
 <header>
-   <a href="#" class="logo"><img src="media/images/fg.jpg" alt=""></a>
+   <a href="/" class="logo"><img src="media/images/fg.jpg" alt=""></a>
     <ul class="navmenu">
         <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
-        <li><a href="#Products">Products</a></li>
         <div class="dropdown">
             <a href="#" class=" dropdown-toggle" type="choose" id="dropdownMenu" data-bs-toggle="dropdown" aria-expanded="false">
                 Category</a>
@@ -74,7 +73,7 @@
             <div class="box me-4 my-1">
                 <div>
                     <input type="hidden" class="dropdown-item" name="sort_arrival" id="sort_arrival" value="">
-                    <button type="button" class="item" onclick="setSortArrival('created_date')">New Arrival</button>
+        <button type="button" style="border:none;background:none;" class="item" onclick="setSortArrival('created_date')">New Arrival</button>
                 </div>
             </div>
         </div>
