--- a/templates/seller_page.html
+++ b/templates/seller_page.html
@@ -36,30 +36,16 @@
             <span class="links_name">Product</span>
           </a>
         </li>
-<!--        <li>-->
-<!--          <a href="#">-->
-<!--            <i class='bx bx-list-ul' ></i>-->
-<!--            <span class="links_name">Order list</span>-->
-<!--          </a>-->
-<!--        </li>-->
-<!--       -->
-<!--        <li>-->
-<!--          <a href="#">-->
-<!--            <i class='bx bx-coin-stack' ></i>-->
-<!--            <span class="links_name">Stock</span>-->
-<!--          </a>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="#">-->
-<!--            <i class='bx bx-book-alt' ></i>-->
-<!--            <span class="links_name">Total order</span>-->
-<!--          </a>-->
-<!--        </li>-->
-
         <li>
-          <a href="offer_page">
-            <i class='bx bx-heart' ></i>
+          <a href="view_offer">
+            <i class='bx bx-offer' ></i>
             <span class="links_name">Offer</span>
+          </a>
+        </li>
+        <li>
+          <a href="seller_order">
+            <i class='bx bx-order' ></i>
+            <span class="links_name">Order</span>
           </a>
         </li>
         <li class="log_out">
@@ -76,16 +62,10 @@
         <i class='bx bx-menu sidebarBtn'></i>
         <span class="dashboard">Dashboard</span>
       </div>
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-        <i class='bx bx-search' ></i>
-      </div>
       {% for x in sellers %}
       <div class="profile-details">
-<!--        <img src="media/images/profile.png" alt="">-->
         <span class="seller_name">{{x.seller_name}}</span><br><br>
         <span class="seller_id">{{x.seller_id}}</span>
-<!--        <i class='bx bx-chevron-down' ></i>-->
       </div>
       {% endfor %}
     </nav>
@@ -95,7 +75,7 @@
         <div class="box">
           <div class="right-side">
             <div class="box-topic">Total Order</div>
-            <div class="number">40,876</div>
+            <div class="number">{{total_order}}</div>
             <div class="indicator">
               <i class='bx bx-up-arrow-alt'></i>
               <span class="text">Up from yesterday</span>
@@ -106,7 +86,7 @@
         <div class="box">
           <div class="right-side">
             <div class="box-topic">Total Sales</div>
-            <div class="number">38,876</div>
+            <div class="number">{{total_sale}}</div>
             <div class="indicator">
               <i class='bx bx-up-arrow-alt'></i>
               <span class="text">Up from yesterday</span>
@@ -117,7 +97,7 @@
         <div class="box">
           <div class="right-side">
             <div class="box-topic">Total Profit</div>
-            <div class="number">$12,876</div>
+            <div class="number">{{total_profit}}</div>
             <div class="indicator">
               <i class='bx bx-up-arrow-alt'></i>
               <span class="text">Up from yesterday</span>
@@ -128,7 +108,7 @@
         <div class="box">
           <div class="right-side">
             <div class="box-topic">Total Return</div>
-            <div class="number">11,086</div>
+            <div class="number">{{total_return}}</div>
             <div class="indicator">
               <i class='bx bx-down-arrow-alt down'></i>
               <span class="text">Down From Today</span>
